--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: 
+  name: "Recipe 1"
   instructions: MyText
 
 two:
-  name: 
+  name: "Recipe 2"
   instructions: MyText
